descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2011-07-XX  Release 7.20.4                                     ---
----------------------------------------------------------------------

* converted introductory Tcl/Tk presentation to Docbook - Tom Browder
* initial support in archer for editing pipe primitives - Bob Parker
* fixed NURBS raytracing crash due to invalid geometry - Sean Morrison
* fixed memory leak when saving BoT geometry - Nicholas Reed
* improved mged object name globbing support - Sean Morrison
* improved bounding box for rpc, epa, ehy, hyp primitives - Cliff Yapp
* add support for .png file output in rtwizard - Cliff Yapp
* improved rtwizard's invocation of rt - Cliff Yapp
* added object path and keep options to conversion.sh - Tom Browder
* 'keep' command includes sketch when keeping revolve - Sean Morrison
* modified archer startup to not require html documentation files
        - Cliff Yapp, Brandon Hinesley
* improved mged/archer/bwish run-time path behavior on Windows
	- Cliff Yapp, Bob Parker
* upgraded libpng to version 1.5.4 - Cliff Yapp
* improved performance of step-g importer - Zach Easterbrook
* fixed browsing mged html help pages on Windows - Bob Parker
* restored mged 'rt' command output to console window - Sean Morrison
* fixed infinite loop bug plotting NURBS wireframes - Sean Morrison
* added ringworld proc-db - Erik Greenwald
* fixed mged Manual page item in help menu - Brandon Hinesley


----------------------------------------------------------------------
--- 2011-07-01  Release 7.20.2                                     ---
----------------------------------------------------------------------

* improved fusing of coplanar faces (tessellation) - Richard Weiss
* fixed rtwizard issues with unknown units and freezing - Bob Parker