@@ -1762,9 +1762,9 @@ main(int argc, char **argv)
 
     /* These need to be improved */
     tol.magic = BN_TOL_MAGIC;
-    tol.dist = 0.005;
+    tol.dist = 0.0005;
     tol.dist_sq = tol.dist * tol.dist;
-    tol.perp = 1e-5;
+    tol.perp = 1e-6;
     tol.para = 1 - tol.perp;
 
     BU_LIST_INIT( &add_rpp_head );
